declaracao de rotas para auth na api
